src/objects/UI_Activity__c.object
<CustomObject>
    <description>A User Involvement Activity. There may be Participation from one or more UI Participants</description>
    <fields>
        <fullName>Activity_Reference__c</fullName>
        <displayFormat>UIA-{00000}</displayFormat>
        <inlineHelpText>A unique reference nmber for this Activity</inlineHelpText>
        <label>Activity Reference</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Give some detail on the Activity. What is going to happen, who will be there, is there anything special about this Activity.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>When will the Activity end ( could be the same day as the Start)</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Participant_Count__c</fullName>
        <description>The number of Participants for which there are no contact details.</description>
        <inlineHelpText>How many people attended for whom we have no details.</inlineHelpText>
        <label>Group Participant Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Individual_Participation_Count__c</fullName>
        <description>This is the total of all individual participant activities related to this acvitity</description>
        <inlineHelpText>This is the total of all individual Participant Activities related to this Activity</inlineHelpText>
        <label>Individual Participation Count</label>
        <summaryForeignKey>UI_Activity_Participation__c.UI_Activity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Method_of_Involvement_Notes__c</fullName>
        <inlineHelpText>Provide some detail about how Participants are Involved in this Activity</inlineHelpText>
        <label>Method of Involvement Notes</label>
        <length>3204</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Method_of_Involvement__c</fullName>
        <inlineHelpText>The primary way in which Participants are Involved in this Activity</inlineHelpText>
        <label>Method of Involvement</label>
        <picklist>
            <picklistValues>
                <fullName>Questionnaire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One to One Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Speaking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steering Group Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Focus Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <inlineHelpText>What is the result of having Participants involved in this Activity - this should focus on the result for the Society. Select the primary Outcome only.</inlineHelpText>
        <label>Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Successful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsuccessful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Results_Notes__c</fullName>
        <inlineHelpText>Summarise the results for the Society of Participants being Involved in this Activity. Include results for Participants where they are not individually recorded. Include more detail in attachments if required.</inlineHelpText>
        <label>Results Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>When did the Activity Start ?</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <inlineHelpText>Give a short summary of the Activity. This will mainly used for reporting where space is limited.</inlineHelpText>
        <label>Summary</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Participation_Count__c</fullName>
        <formula>Individual_Participation_Count__c  +  Group_Participant_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The total of group and individual Participations</inlineHelpText>
        <label>Total Participation Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UI_Programme__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The programme this activity forms a part of</description>
        <inlineHelpText>The Project/Programme this Activity is associated with.</inlineHelpText>
        <label>User Involvement Programme</label>
        <referenceTo>UI_Programme__c</referenceTo>
        <relationshipLabel>Involvement Activities</relationshipLabel>
        <relationshipName>Society_Activities</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>User Involvement Activity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>UI_Programme__c</columns>
        <columns>NAME</columns>
        <columns>Summary__c</columns>
        <columns>Total_Participation_Count__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Involvement Activities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>